--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,6 +7,18 @@ body {
     padding-bottom: 100px;
 }
 
-.intro {
+#intro {
     color: #fff;
+}
+
+.hide {
+    display: none;
+}
+
+h1 {
+    font-family: 'Bangers', cursive;
+}
+
+p {
+    font-family: 'Delius', cursive;
 }
