--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #eae8e8;
+    background-color: #8e0900;
 }
 
 .dc-data-grid {
@@ -15,12 +15,16 @@ body {
     display: none;
 }
 
-h1, h2 {
+h1,
+h2 {
     font-family: 'Bangers', cursive;
 }
 
 p {
     font-family: 'Delius', cursive;
+    color: #000;
+    font-weight: bold;
+    font-size: 1.5em;
 }
 
 .main-title {
@@ -30,15 +34,26 @@ p {
 }
 
 .btn {
-    background-color: #efdb00;
+    background-color: #ffcd28;
     font-family: 'Delius', cursive;
+    font-size: 1.5em;
+    font-weight: bold;
     color: #000;
     border: 2px solid black;
     outline: 5px solid white;
     margin-bottom: 20px;
+    -moz-box-shadow: -3px 4px 4px 8px #000;
+    -webkit-box-shadow: -3px 4px 4px 8px #000;
+    box-shadow: -3px 4px 4px 8px #000;
 }
 
 .header {
     background: url('data:image/svg+xml;utf8,<svg width="100" height="100" transform="rotate(0)" opacity="0.5" version="1.1" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><g  fill="%23250E17"><circle cx="25" cy="25" r="5"/><circle cx="75" cy="75" r="5"/><circle cx="75" cy="25" r="5"/><circle cx="25" cy="75" r="5"/></g></svg>'),
     #000754;
+    margin-bottom: 20px;
+}
+
+.main-page {
+    max-width: 800px;
+    margin: auto;
 }
