--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,18 +1,15 @@
+/* General Styling */
+
 body {
     background-color: #8e0900;
 }
 
-.dc-data-grid {
-    color: #fff;
-    padding-bottom: 100px;
-}
+/* Text Styles */
 
-#intro {
-    color: #fff;
-}
-
-.hide {
-    display: none;
+.main-title {
+    font-size: 250px;
+    color: #8e0900;
+    -webkit-text-stroke: 9px black;
 }
 
 h1,
@@ -32,17 +29,18 @@ p {
     color: #000754;
     font-weight: bold;
     font-size: 40px;
-    -webkit-text-stroke: 0.25px white;
 }
 
 .dc-data-grid {
     color: #000;
+    padding-bottom: 100px;
 }
 
-.main-title {
-    font-size: 250px;
-    color: #8e0900;
-    -webkit-text-stroke: 9px black;
+
+/* Transition Classes */
+
+.hide {
+    display: none;
 }
 
 .btn {
@@ -59,6 +57,8 @@ p {
     -webkit-box-shadow: -3px 4px 4px 8px #000;
     box-shadow: -3px 4px 4px 8px #000;
 }
+
+/* Section Styles */
 
 .header {
     background: url('data:image/svg+xml;utf8,<svg width="100" height="100" transform="rotate(0)" opacity="0.5" version="1.1" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><g  fill="%23250E17"><circle cx="25" cy="25" r="5"/><circle cx="75" cy="75" r="5"/><circle cx="75" cy="25" r="5"/><circle cx="25" cy="75" r="5"/></g></svg>'),
@@ -81,8 +81,6 @@ p {
     -webkit-box-shadow: -3px 4px 4px 8px #000;
     box-shadow: -3px 4px 4px 8px #000;
 }
-
-
 
 
 /* Media Queries */
