--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,17 +1,12 @@
-/* General Styling */
+/* ----General Styling---- */
 
 body {
     background-image: url('/static/images/background-image.jpg');
     background-color: #8e0900;
+    height: 100%;
 }
 
-/* Text Styles */
-
-.main-title {
-    font-size: 180px;
-    color: #8e0900;
-    -webkit-text-stroke: 9px black;
-}
+/* ----Text Styles---- */
 
 h1,
 h2 {
@@ -22,25 +17,46 @@ footer p {
     padding-left: 20px;
     padding-right: 20px;
     font-family: 'Delius', cursive;
+    color: #8e0900;
 }
 
-/* Section and Box Styles */
+.text-box-sm p {
+    padding: 5px;
+    margin-bottom: 5px;
+}
+
+/* ----Link Styles---- */
+
+.main-title a {
+    font-size: 180px;
+    color: #8e0900;
+    -webkit-text-stroke: 9px black;
+    text-decoration: none;
+}
+
+footer a {
+    color: #ff0e00;
+}
+
+footer a:hover {
+    color: #8e0900;
+    text-decoration: none;
+}
+
+/* ----Section and Box Styles---- */
 
 .header {
     background: url('data:image/svg+xml;utf8,<svg width="100" height="100" transform="rotate(0)" opacity="0.5" version="1.1" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><g  fill="%23250E17"><circle cx="25" cy="25" r="5"/><circle cx="75" cy="75" r="5"/><circle cx="75" cy="25" r="5"/><circle cx="25" cy="75" r="5"/></g></svg>'),
     #000754;
+    background-size: 30px, 100%;
     margin-bottom: 20px;
 }
 
 footer {
-    background-color: #000754;
-    color: #8e0900;
+    background: url('data:image/svg+xml;utf8,<svg width="100" height="100" transform="rotate(0)" opacity="0.5" version="1.1" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><g  fill="%23250E17"><circle cx="25" cy="25" r="5"/><circle cx="75" cy="75" r="5"/><circle cx="75" cy="25" r="5"/><circle cx="25" cy="75" r="5"/></g></svg>'),
+    #000754;
+    background-size: 30px, 100%;
     padding: 20px;
-}
-
-.dc-data-grid {
-    color: #000;
-    padding-bottom: 100px;
 }
 
 .text-box {
@@ -61,7 +77,9 @@ footer {
 }
 
 .text-box-alt {
-    background-color: #fff;
+    background: url('data:image/svg+xml;utf8,<svg width="100" height="100" transform="rotate(25)" opacity="0.3" version="1.1" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><g  fill="%23250E17"><circle cx="25" cy="25" r="12.5"/><circle cx="75" cy="75" r="12.5"/><circle cx="75" cy="25" r="12.5"/><circle cx="25" cy="75" r="12.5"/></g></svg>'),
+    #fff;
+    background-size: 12px, 100%;
     padding: 30px;
     border: 5px solid black;
     max-width: 800px;
@@ -74,7 +92,9 @@ footer {
 }
 
 .text-box-sm {
-    background-color: #f2af85;
+    background: url('data:image/svg+xml;utf8,<svg width="100" height="100" transform="rotate(25)" opacity="0.3" version="1.1" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><g  fill="%23250E17"><circle cx="25" cy="25" r="12.5"/><circle cx="75" cy="75" r="12.5"/><circle cx="75" cy="25" r="12.5"/><circle cx="25" cy="75" r="12.5"/></g></svg>'),
+    #f2af85;
+    background-size: 12px, 100%;
     font-family: 'Delius', cursive;
     color: #000;
     font-weight: bold;
@@ -85,9 +105,18 @@ footer {
     max-width: 200px;
     margin: auto;
     margin-bottom: 40px;
+    vertical-align: middle;
     -moz-box-shadow: -3px 4px 4px 8px #000;
     -webkit-box-shadow: -3px 4px 4px 8px #000;
     box-shadow: -3px 4px 4px 8px #000;
+}
+
+.chart-container {
+    max-width: 800px;
+    margin: auto;
+    font-family: 'Delius', cursive;
+    font-size: 20px;
+    color: #fff;
 }
 
 .btn {
@@ -100,30 +129,89 @@ footer {
     border: 2px solid black;
     outline: 5px solid white;
     margin: auto;
-    margin-bottom: 20px;
+    margin-bottom: 60px;
     -moz-box-shadow: -3px 4px 4px 8px #000;
     -webkit-box-shadow: -3px 4px 4px 8px #000;
     box-shadow: -3px 4px 4px 8px #000;
 }
 
-.chart-container {
-    max-width: 800px;
-    margin: auto;
-    font-family: 'Delius', cursive;
+/* ----DC.js Chart Styles---- */
+
+.dc-chart .axis path {
+    fill: none;
+    stroke: #fff;
+    shape-rendering: crispEdges;
 }
 
-/* Transitions */
+.dc-chart .pie-slice.external {
+    fill: #fff;
+    font-size: 16px;
+}
+
+.dc-chart .pie-path {
+    fill: none;
+    stroke-width: 2px;
+    stroke: #fff;
+    opacity: 1;
+}
+
+.dc-chart select {
+    max-width: 100%;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    font-size: 30px;
+}
+
+.dc-data-grid {
+    color: #000;
+    padding-bottom: 100px;
+}
+
+.dc-grid-item h1 {
+    font-size: 60px;
+}
+
+.dc-grid-item img {
+    margin-bottom: 20px;
+}
+
+/* ----Transitions---- */
 
 .hide {
     display: none;
 }
 
 
-/* Media Queries */
+/* ----Media Queries---- */
 
 @media (max-width: 575.98px) {
-    .main-title{
-        font-size: 70px;
+    .main-title a {
+        font-size: 65px;
         -webkit-text-stroke: 3px black;
+    }
+    .text-box {
+        max-width: 300px;
+    }
+    .text-box-alt {
+        font-size: 50px;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+    .main-title a {
+        font-size: 100px;
+        -webkit-text-stroke: 6px black;
+    }
+    .text-box {
+        max-width: 500px;
+    }
+    .text-box-alt {
+        font-size: 100px;
+    }
+}
+
+@media (min-width: 992px) and (max-width: 1199.98px) { 
+    .main-title a {
+        font-size: 150px;
     }
 }
