Updated file paths for background image and datasets again - previous push did not include changes

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,7 @@
 /* ----General Styling---- */
 
 body {
-    background-image: url('/static/images/background-image.jpg');
+    background-image: url('../static/images/background-image.jpg');
     background-color: #8e0900;
     height: 100%;
 }
